--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -74,163 +74,223 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** custom **/
+  --ion-color-main: rgb(221, 174, 21);
+  --ion-color-main-rgb: 221, 174, 21;
+  --ion-color-main-contrast: rgb(0, 0, 0);
+  --ion-color-main-contrast-rgb: 0, 0, 0;
+  --ion-color-main-shade: rgb(179, 142, 22);
+  --ion-color-main-tint: rgb(233, 195, 71);
+
+  /** custom light **/
+  --ion-color-custom-light: #141a22;
+  --ion-color-custom-light-contrast: #ffffff;
+  --ion-color-custom-light-shade: #12171d;
+  --ion-color-custom-light-tint: #232c38;
 }
 
-@media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
+.ion-color-main {
+  --ion-color-base: var(--ion-color-main);
+  --ion-color-base-rgb: var(--ion-color-main-rgb);
+  --ion-color-contrast: var(--ion-color-main-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-main-contrast-rgb);
+  --ion-color-shade: var(--ion-color-main-shade);
+  --ion-color-tint: var(--ion-color-main-tint);
+}
 
-  body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+.ion-color-custom-light {
+  --ion-color-base: var(--ion-color-custom-light);
+  --ion-color-contrast: var(--ion-color-custom-light-contrast);
+  --ion-color-shade: var(--ion-color-custom-light-shade);
+  --ion-color-tint: var(--ion-color-custom-light-tint);
+}
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+:root {
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+  --main-orange-color: #d17842;
 
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
-
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
-
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
-
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
-
-  /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-  .ios body {
-    --ion-background-color: #000000;
+    --ion-background-color: #0e1016;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255,255,255;
+    --ion-item-background: #141a22;
 
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
+    --ion-card-background: #141a22;
+    --ion-tab-bar-color: #4d5053;
+    --ion-tab-bar-background: #0e1016;
+    --ion-tab-bar-color-selected: rgb(221, 174, 21);
 
-    --ion-item-background: #000000;
+    /* --ion-toolbar-color: white; */
+    --ion-toolbar-background: #0e1016;
+    --ion-toolbar-border-color: #0e1016;
+    --ion-tab-bar-border-color: #0e1016;
+    --ion-grid-column-padding: 0;
+}
 
-    --ion-card-background: #1c1c1d;
-  }
+.app-icon {
 
-  .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
-    --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
+  color: rgb(221, 174, 21);
+}
 
+ion-toolbar {
 
-  /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
+  --padding-start: 1rem;
+  --padding-end: 1rem;
+  --padding-top: 1rem;
+  --padding-bottom: 1rem;
+}
 
-  .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+.inner-toolbar {
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+  --padding-top: 0rem !important;
+  --padding-bottom: 0rem !important;
+}
 
-    --ion-border-color: #222222;
+.button-container-img img {
 
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
+  height: 2.3rem;
+  border-radius: 10px;
+}
 
-    --ion-item-background: #1e1e1e;
+.gray-icon {
 
-    --ion-toolbar-background: #1f1f1f;
+  color: var(--ion-tab-bar-color);
+  background-color: #1b2025;
+}
 
-    --ion-tab-bar-background: #1f1f1f;
+.yellow-icon {
 
-    --ion-card-background: #1e1e1e;
-  }
+  color: var(--ion-color-main);
+  background-color: #1b2025;
+}
+
+.button-container {
+
+  background-color: #1b2025;
+  border: 2px solid #1d232a;
+  padding: 0.5rem;
+  border-radius: 13px;
+
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container-img {
+
+  background-color: #1b2025;
+  border: 2px solid #1d232a;
+  padding: 0.2rem;
+  border-radius: 13px;
+
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
+ion-card {
+
+  padding: 0.8rem;
+  border-radius: 20px;
+}
+
+.coffee-card img {
+
+  border-radius: 20px;
+  height: 10rem;
+  width: 100%;
+}
+
+.coffee-card-long img {
+
+  border-radius: 20px;
+  height: 5rem !important;
+  width: 100%;
+}
+
+.coffee-card-long-details {
+
+  margin-left: 1rem;
+  margin-top: -0.7rem;
+}
+
+.coffee-card-long-details p {
+
+  font-size: 0.8rem;
+  margin: 0;
+  margin-top: 0.2rem;
+}
+
+.coffee-card ion-card-title {
+
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+
+.coffee-card .coffee-price {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  margin-top: -0.2rem;
+}
+
+.coffee-card .coffee-price .add-button {
+
+  color: var(--main-orange-color) !important;
+  margin-top: 0.5rem;
+}
+
+.coffee-card .coffee-price .add-button svg {
+
+  color: white !important;
+}
+
+.outer-heading {
+
+  margin-bottom: -1.3rem;
+  margin-left: 0.5rem;
+  margin-right: 1.3rem;
+}
+/* 
+.searchbar-input {
+
+  padding: 1.5rem !important;
+}
+
+.searchbar-search-icon {
+
+  margin-top: 0.3rem;
+  margin-right: 3rem;
+  padding-right: 3rem;
+} */
+/* 
+ion-tab-bar {
+
+  bottom: 20px;
+  position: relative;
+  box-shadow: 0px 0px 1.5px rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+width: 92%;
+border-top: none;
+margin: 0 auto;
+height: 55px;
+}
+
+ion-tab-button {
+  --padding-bottom: 8px;
+  --padding-top: 8px;
+} */
+
+.custom-margin-left {
+
+  margin-left: 0.2rem;
 }
